crates/scheduler/tests/trybuild/fail/serde_skip.rs
use scheduler_macros::ScheduledTaskParams;

#[derive(ScheduledTaskParams)]
#[task_params(schema_version = 1)]
struct Params {
    #[serde(skip)]
    name: String,
}

fn main() {}
